# ddeb-retriever-operator

./: .gitignore  LICENSE  Makefile  README.md  charmcraft.yaml  pyproject.toml  tox.ini
ddeb-test/: LICENSE  README.md  charmcraft.yaml  pyproject.toml  tox.ini
ddeb-test/src/: charm.py  ddeb.py  lpsign.py
src/: charm.py  ddeb_retriever.py  git.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: test_charm.py  test_ddeb_retriever.py  test_git.py
